Renovates homepage (pt 1/?) - changes homepage text in header for more relevancy - removes tiny logo in upper left (useless) - deletes unneeded website header - modifies scrollbar for better look - removes 'codecleanedup.html' bc it's useless - added a favicon - installs tailwind css to ensure all commands are running properly - for task #47

--- a/www/style.css
+++ b/www/style.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=fallback');
 
 @font-face {
@@ -161,12 +164,12 @@ a {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 3px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(transparent, #FFA309 );
-  border-radius: 6px;
+  background: #FFA309;
+  border-radius: 2px;
 }
 /*
 Add the correct font weight in Edge and Safari.
@@ -874,7 +877,7 @@ select{
 
 /* Buttons */
 
-.btn, 
+.btn,
 .btn-sm{
   display: inline-flex;
   align-items: center;
@@ -912,11 +915,11 @@ input[type="search"]::-webkit-search-results-decoration {
   -webkit-appearance: none;
 }
 
-.form-input, 
-.form-textarea, 
-.form-multiselect, 
-.form-select, 
-.form-checkbox, 
+.form-input,
+.form-textarea,
+.form-multiselect,
+.form-select,
+.form-checkbox,
 .form-radio{
   border-width: 1px;
   --tw-border-opacity: 1;
@@ -925,27 +928,27 @@ input[type="search"]::-webkit-search-results-decoration {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
-.form-input:focus, 
-.form-textarea:focus, 
-.form-multiselect:focus, 
-.form-select:focus, 
-.form-checkbox:focus, 
+.form-input:focus,
+.form-textarea:focus,
+.form-multiselect:focus,
+.form-select:focus,
+.form-checkbox:focus,
 .form-radio:focus{
   --tw-border-opacity: 1;
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
 }
 
-.form-input, 
-.form-textarea, 
-.form-multiselect, 
-.form-select, 
+.form-input,
+.form-textarea,
+.form-multiselect,
+.form-select,
 .form-checkbox{
   border-radius: 0.125rem;
 }
 
-.form-input, 
-.form-textarea, 
-.form-multiselect, 
+.form-input,
+.form-textarea,
+.form-multiselect,
 .form-select{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -953,7 +956,7 @@ input[type="search"]::-webkit-search-results-decoration {
   padding-right: 1rem;
 }
 
-.form-input, 
+.form-input,
 .form-textarea{
   line-height: 1.375;
 }
@@ -968,7 +971,7 @@ input[type="search"]::-webkit-search-results-decoration {
   color: rgb(107 114 128 / var(--tw-placeholder-opacity));
 }
 
-.form-input::placeholder, 
+.form-input::placeholder,
 .form-textarea::placeholder{
   --tw-placeholder-opacity: 1;
   color: rgb(107 114 128 / var(--tw-placeholder-opacity));
@@ -978,7 +981,7 @@ input[type="search"]::-webkit-search-results-decoration {
   padding-right: 2.5rem;
 }
 
-.form-checkbox, 
+.form-checkbox,
 .form-radio{
   border-radius: 0.125rem;
   --tw-text-opacity: 1;
@@ -1103,11 +1106,11 @@ input[type=range]::-moz-focus-outer {
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
-.form-input:focus, 
-.form-textarea:focus, 
-.form-multiselect:focus, 
-.form-select:focus, 
-.form-checkbox:focus, 
+.form-input:focus,
+.form-textarea:focus,
+.form-multiselect:focus,
+.form-select:focus,
+.form-checkbox:focus,
 .form-radio:focus{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
